--- a/Index.css
+++ b/Index.css
@@ -703,6 +703,17 @@ a{
     color: white;
 }
 
+.bottomForm form button{
+    border: 2px solid #B1B2FF;
+    border-radius: 5px;
+    background: none;
+    margin: 10px 0 10px 0;
+    padding: 15px;  
+    color: white;
+    cursor: pointer;
+    transition: transform .2s;
+}
+
 /*-----------------------------------------------------*/
 @media only screen and (max-width:1400px){
     .upperPos{
