--- a/Index.css
+++ b/Index.css
@@ -704,14 +704,18 @@ a{
 }
 
 .bottomForm form button{
-    border: 2px solid #B1B2FF;
+    border: 2px solid white;
     border-radius: 5px;
     background: none;
-    margin: 10px 0 10px 0;
+    margin: 2px 0 2px 0;
     padding: 15px;  
     color: white;
     cursor: pointer;
     transition: transform .2s;
+}
+
+.bottomForm form button:hover{
+    transform: scale(1.1);
 }
 
 /*-----------------------------------------------------*/
