--- a/Index.css
+++ b/Index.css
@@ -658,8 +658,16 @@ a{
     font-size: 3.5vw;
 }
 
+.demnSon h1:hover{
+    color: #B1B2FF;
+}
+
 .demnSon p{
     font-size: 1.3vw;
+}
+
+.demnSon p:hover{
+    color: #B1B2FF;
 }
 
 
@@ -1245,6 +1253,95 @@ a{
     
     .announceImg img{
         display: none;
+    }
+
+    /* ================================================ */
+
+    .bottomLinks{
+        display: flex;
+        justify-content: center;
+        padding-left: 15%;
+        padding-right: 15%;
+        padding-top: 5%;
+        padding-bottom: 5%;
+        background-color: black;
+        color: white;
+    }
+    
+    .demnSon{
+        margin-right: 2%;
+    }
+    
+    .demnSon h1{
+        font-size: 3.5vw;
+    }
+    
+    .demnSon h1:hover{
+        color: #B1B2FF;
+    }
+    
+    .demnSon p{
+        font-size: 1.3vw;
+    }
+    
+    .demnSon p:hover{
+        color: #B1B2FF;
+    }
+    
+    
+    /* ================================================ */
+    
+    .bottomForm{
+        width: 60%;
+        margin-left: 5%;
+    }
+    
+    .bottomForm h1{
+        font-size: 2.5vw;
+    }
+    
+    .bottomForm p{
+        font-size: 1.3vw;
+        margin-bottom: 5%;
+    }
+    
+    .bottomForm form{
+        border: 1px white solid;
+        padding: 7%;
+        padding-top: 8%;
+        padding-bottom: 8%;
+    }
+    
+    .bottomForm form label{
+        padding-top: 2%;
+    }
+    
+    .bottomForm form input{
+        width: 100%;
+        background: none;
+        outline: none;
+        padding-top: 2%;
+        padding-bottom: 2%;
+        border: none;
+        border-bottom: white 1px solid;
+        margin-bottom: 2%;
+        font-size: 1.3vw;
+        color: white;
+    }
+    
+    .bottomForm form button{
+        border: 2px solid white;
+        border-radius: 5px;
+        background: none;
+        margin: 2px 0 2px 0;
+        padding: 15px;  
+        color: white;
+        cursor: pointer;
+        transition: transform .2s;
+    }
+    
+    .bottomForm form button:hover{
+        transform: scale(1.1);
     }
 
 }
