--- a/Sundayservice.css
+++ b/Sundayservice.css
@@ -17,6 +17,7 @@ a{
     color: black;
 }
 
+
 .topbar{
     padding-left: 5%;
     width: 100%;
@@ -28,127 +29,96 @@ a{
     color: white;
 }
 
-.webContent{
-    display: flex; 
-    justify-content: center;
+.topbar img{
+    width: 100px;
+    cursor: pointer;
+    margin-top: 2%;
+}
+
+/* ================================================================ */
+
+.videoSection{
+    display: block;
     margin-top: 5%;
-    align-items: center;
-    margin-left: 15%;
-    margin-right: 15%;
 }
 
-.webContent .video iframe{
-    max-width: 100%;
-    width: 1200px;
-    height: 400px;
-    border: 2px solid #B1B2FF;
-    border-radius: 5px;
-}
-
-.webContent .text{
-    padding-left: 80px;
-}
-
-.webContent .text h1{
+.videoSection h1{
+    text-align: center;
+    margin-top: 2%;
+    color: white;
     font-size: 4vw;
-    color: white;
 }
 
-.webContent .text h2{
-    font-size: 0.9vw;
+.videoSection p{
+    text-align: center;
     color: white;
+    font-size: 1.8vw;
+}
+
+.videoSection video{
+    display: block;
+    margin: 0 auto;
 }
 
 /* ================================================================ */
 
-.sundayService{
-    margin-top: 5%;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-bottom: 2%;
-    display: flex;
-    padding-left: 5%;
-    padding-right: 5%;
-    align-items: center;
+.sundayserviceIntro{
+    display: block;
+    background-size: cover;
+    background-image: url(SundaySchooltings/bgbackground.jpg);
+    padding-bottom: 100px;
 }
 
-.sundayService .picture{
-    margin-right: 5%;
-    flex: 1;
+.introText h2{
+    text-align: center;
+    padding-top: 3%;
+    font-size: 2.5vw;
 }
 
-.sundayService img{
+.introText h1{
+    text-align: center;
+    font-size: 8vw;
+}
+
+.monthsText h2{
+    text-align: center;
+    padding-top: 3%;
+    font-size: 2.5vw;
+}
+
+.monthsText h1{
+    text-align: center;
+    font-size: 4vw;
+    padding-bottom: 3%;
+}
+
+.monthsText img{
     width: 100%;
-    max-width: 600px;
-    border-radius: 10px;
-}
-
-.sundayService .text{
-    flex: 1;
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
-.sundayService h1{
-    font-size: 2.4vw;
-    padding-bottom: 2%;
-}
-
-.sundayService p{
-    font-size: 1.3vw;
-    text-align: justify;
-}
-
-/* ================================================================ */
-
-.wiss{
-    margin-top: 5%;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-bottom: 2%;
-    padding-bottom: 2%;
-}
-
-
-
-.wissImg img{
-    margin-top: 5%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    max-width: 1500px;
-    border-radius: 20px;
-}
-
-.noice h1{
-    font-size: 2.4vw;
-    padding-bottom: 1%;
-}
-
-.noice p{
-    font-size: 1.3vw;
-    text-align: justify;
+    max-width: 1200px;
+    display: block;
+    margin: auto;
 }
 
 /* ================================================================ */
 
 #web2{
-    padding-top: 5%;
+    padding-top: 10%;
     padding-bottom: 5%;
     background-color: #f4f4f0;
 }
 
 .pastStudies{
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .pastStudies h1{
-    font-size: 2vw;
+    font-size: 3vw;
 }
 
 .pastStudies p{
-    font-size: 1vw;
+    font-size: 1.5vw;
 }
 
 /* ================================================================ */
@@ -188,7 +158,7 @@ a{
 }
 
 .textArea h5{
-    font-size: 0.6vw;
+    font-size: 1vw;
 }
 
 /* ================================================================ */
@@ -226,7 +196,7 @@ a{
 }
 
 .textArea2 h5{
-    font-size: 0.6vw;
+    font-size: 1vw;
 }
 
 /* ================================================================ */
@@ -259,7 +229,7 @@ a{
 }
 
 .textArea3 h5{
-    font-size: 0.6vw;
+    font-size: 1vw;
 }
 
 /* ================================================================ */
@@ -300,7 +270,7 @@ a{
 }
 
 .textArea4 h5{
-    font-size: 0.6vw;
+    font-size: 1vw;
 }
 
 /* ================================================================ */
@@ -333,7 +303,7 @@ a{
 }
 
 .textArea5 h5{
-    font-size: 0.6vw;
+    font-size: 1vw;
 }
 
 /* ================================================================ */
@@ -366,71 +336,159 @@ a{
 }
 
 .textArea6 h5{
-    font-size: 0.6vw;
+    font-size: 1vw;
 }
 
 /* ================================================================ */
 
-.form{
-    margin-left: 15%;
-    margin-right: 15%;
-    display: block;
+.announce1{
+    display: flex;
     justify-content: center;
-}
-
-.form .text{
-    display: block;
-    justify-content: center;
+    align-items: center;
     padding-top: 5%;
-    padding-bottom: 2%;
+    padding-bottom: 5%;
+    margin-right: 15%;
+    margin-left: 15%;
 }
 
-.text h1{
+.announcement{
+   margin-right: 80px;
+   align-items: center;
+}
+    
+.announcement h1{
+    font-size: 3.5vw;
+    text-align: right;
+}
+
+.announcement p{
     font-size: 2vw;
+    text-align: right;
 }
 
-.text p{
-    font-size: 1vw;
+.announcement .btn{
+    display: flex;
+    justify-content: end;
 }
 
-.notif form{
-    width: 100%;
+.announcement button{
+    border: 2px solid #B1B2FF;
+    border-radius: 5px;
+    background: none;
+    margin: 10px 0 10px 0;
+    padding: 15px;  
+    cursor: pointer;
+    transition: transform .2s;
+}
+
+.announcement button:hover{
+    transform: scale(1.1);
+}
+
+.announceImg img{
+    width: 370px;
+    border-radius: 50%;
+}
+
+/* ================================================================ */
+
+.bottomLinks{
+    display: flex;
     justify-content: center;
-    padding: 1%;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    background-color: #243b55;
+    color: white;
+    margin-bottom: 0;
+}
+
+.demnSon{
+    margin-right: 2%;
+}
+
+.demnSon h1{
+    font-size: 3.5vw;
+}
+
+.demnSon a{
+    text-decoration: none;
+    color: white;
+}
+
+.demnSon a:hover{
+    color: #B1B2FF;
+}
+
+.demnSon h1:hover{
+    color: #B1B2FF;
+}
+
+.demnSon p{
+    font-size: 1.3vw;
+}
+
+.demnSon p:hover{
+    color: #B1B2FF;
+}
+
+/* ================================================ */
+
+.bottomForm{
+    width: 60%;
+    margin-left: 5%;
+}
+
+.bottomForm h1{
+    font-size: 2.5vw;
+}
+
+.bottomForm p{
+    font-size: 1.3vw;
     margin-bottom: 5%;
 }
 
-.notif label{
-    font-size: 1vw;
-    padding-right: 1%;
+.bottomForm form{
+    border: 1px white solid;
+    padding: 7%;
+    padding-top: 8%;
+    padding-bottom: 8%;
 }
 
-.notif input{
-    margin-right: 1%;
-    width: 25%;
-    padding: 2px;
-    font-size: 1vw;
-    color: gray;
-    outline: none;
-    border: none;
-    border-bottom: #91d9dd solid 2px;
+.bottomForm form label{
+    padding-top: 2%;
+}
+
+.bottomForm form input{
+    width: 100%;
     background: none;
+    outline: none;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    border: none;
+    border-bottom: white 1px solid;
+    margin-bottom: 2%;
+    font-size: 1.3vw;
+    color: white;
 }
 
-.notif button{
-    margin-top: 1%;
-    padding: 1%;
-    border: 2px solid #91d9dd;
+.bottomForm form button{
+    border: 2px solid white;
     border-radius: 5px;
     background: none;
-    font-size: 0.7w;
+    margin: 2px 0 2px 0;
+    padding: 15px;  
+    color: white;
     cursor: pointer;
-    transition: .3s ease-in-out;
+    transition: transform .2s;
 }
 
-.notif button:hover{
+.bottomForm form button:hover{
     transform: scale(1.1);
 }
+
+/* ================================================ */
 
 .hidden{
     opacity: 0;
@@ -444,9 +502,6 @@ a{
     filter: blur(0);
     transform: translateX(0);
 }
-
-
-
 
 @media only screen and (max-width:700px){
     *{
